Did some basic endpoints
