# api/api/swagger/swagger.yaml
@@ -18,6 +18,30 @@ consumes:
 produces:
   - application/json
 paths:
+  /hello:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: hello_world
+    get:
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: hello
+      parameters:
+        - name: name
+          in: query
+          description: The name of the person to whom to say hello
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /games:
     # binds a127 app logic to a route
     x-swagger-router-controller: game
@@ -63,7 +87,7 @@ paths:
     get:
       description: Returns the information of a specific game.
       # used as the method name of the controller
-      operationId: getGameInfo
+      operationId: getOneGame
       parameters:
         - name: id
           in: path
@@ -105,19 +129,15 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"                  
+  /swagger:
+    x-swagger-pipe: swagger_raw          
 # complex objects have schema definitions
 definitions:
   Games:
     description: Containing an array of Game item.
-    required:
-      - message
-    properties:
-      message:
-        type: string
-      data:
-        type: array
-        items:
-          $ref: '#/definitions/Game'
+    type: array
+    items:
+      $ref: '#/definitions/Game'
   Game:
     description: Describing the data model of a Game.
     properties:
@@ -128,7 +148,7 @@ definitions:
       state:
         description: The current game's state.
         type: string
-      1stPlayerIsNext:
+      firstPlayerIsNext:
         description: Indicating whether the 1st player is the next one.
         type: boolean
       players:
@@ -141,9 +161,13 @@ definitions:
         type: array
         items:
           type: string
-  ErrorResponse:
+  HelloWorldResponse:
     required:
       - message
+    properties:
+      message:
+        type: string
+  ErrorResponse:
     properties:
       message:
         type: string
